--- a/src/css/reset/3rd-party/fork-me.less
+++ b/src/css/reset/3rd-party/fork-me.less
@@ -14,7 +14,7 @@ body >header >#fork-me-container {  //dynamically added wrapper element
    width: 200px;
    height: 200px;
    overflow: hidden;
-   z-index: 150;
+   z-index: @layerNavigation;
    pointer-events: none;
    >a#fork-me {
       display: block;
