--- a/src/css/reset/lib-x-tools/bubble-help.less
+++ b/src/css/reset/lib-x-tools/bubble-help.less
@@ -29,7 +29,7 @@
       font-size: 0.8rem;
       font-weight: bold;
       pointer-events: none;
-      z-index: 200;
+      z-index: @layerHover;
       opacity: 0;
       transition: opacity 600ms 300ms;  //300ms delay to prevent flicker
       >.bubble-help {
