--- a/src/css/reset/utility-classes.less
+++ b/src/css/reset/utility-classes.less
@@ -23,7 +23,7 @@
 
 // Utilities (substitute for mixins on web pages without less)
 .keep-together       { white-space: nowrap; }
-.hide-me             { display: none; visibility: hidden; padding: 0px; margin: 0px; opacity: 0; z-index: -10000; }
+.hide-me             { display: none; visibility: hidden; padding: 0px; margin: 0px; opacity: 0; z-index: @layerBackground; }
 .float-endgame:after { content: " "; display: table; clear: both; }
 .separator:after     { content: "|"; padding: 0px 5px; }
 .hover-glow          { transition: all 500ms; }
