--- a/src/css/reset/videos.less
+++ b/src/css/reset/videos.less
@@ -59,7 +59,7 @@ figure.video-container-link {
       border-radius: 4px;
       padding: 6px 16px;
       margin-right: 30px;
-      z-index: 100;
+      z-index: @layerHover;
       pointer-events: none;
       }
    }
